[package]
name = "cachebench"
version = "0.11.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["moka-v012", "rt-tokio"]

moka-v012 = ["dep:moka012"]
moka-v011 = ["dep:moka011"]
moka-v010 = ["dep:moka010"]
moka-v09 = ["dep:moka09"]
moka-v08 = ["dep:moka08"]
hashlink = ["dep:hashlink"]
mini-moka = ["dep:mini-moka"]
quick_cache = ["dep:quick_cache"]
stretto = ["dep:stretto"]
tiny-ufo = ["dep:TinyUFO"]

rt-tokio = ["dep:tokio"]
rt-async-std = ["dep:async-std"]

[dependencies]
anyhow = "1"
async-io = "2"
async-trait = "0.1"
clap = "3.2.23"
crossbeam-channel = "0.5"
futures-util = "0.3"
itertools = "0.14"
parking_lot = "0.12"
thiserror = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Async Runtime
tokio = { optional = true, version = "1", features = ["rt-multi-thread", "macros" ] }
async-std = { optional = true, version = "1", features = ["attributes"] }

# Cache implementations
hashlink = { optional = true, version = "0.11" }
mini-moka = { optional = true, version = "0.10" }
quick_cache = { optional = true, version = "0.6" }
stretto = { optional = true, version = "0.9", default-features = false, features = ["sync", "tokio"] }
TinyUFO = { optional = true, version = "0.8" }

[dependencies.moka012]
package = "moka"
optional = true
version = "0.12"
# git = "https://github.com/moka-rs/moka"
# branch = "main"
features = ["future", "sync"]

[dependencies.moka011]
package = "moka"
optional = true
version = "0.11.3"
features = ["future"]

[dependencies.moka010]
package = "moka"
optional = true
version = "0.10.4"
features = ["future"]

[dependencies.moka09]
package = "moka"
optional = true
version = "0.9.9"
features = ["future", "dash"]

[dependencies.moka08]
package = "moka"
optional = true
version = "0.8.6"
features = ["future", "dash"]

# [profile.release]
# debug=true
# debug-assertions=true
# overflow-checks = true
